# emotion2onnx

./: .gitignore  README.md  pyproject.toml
examples/: usage.py
scripts/: export_onnx.py
src/emotion2onnx/: __init__.py
