[project]
name = "emotion2onnx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "thewh1teagle", email = "61390950+thewh1teagle@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "onnxruntime>=1.20.1",
]

[dependency-groups]
dev = ["ruff>=0.8.6", "soundfile>=0.13.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
